# tiny-egraph

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: arith.rs  array.rs  boolean.rs  constfold.rs
src/: analysis.rs  egraph.rs  ematch.rs  extract.rs  id.rs  language.rs  lib.rs  pattern.rs  rewrite.rs  runner.rs  unionfind.rs
tests/: integration.rs
