[package]
name = "tiny-egraph"
version = "0.1.0"
categories = ["algorithms", "data-structures"]
edition = "2021"
keywords = ["egraph", "rewriting", "saturation", "tutorial"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sdiehl/tiny-egraph"
description = "A minimal e-graph implementation"

[dependencies]

[features]
default = []
analysis = []

[[example]]
name = "arith"
path = "examples/arith.rs"

[[example]]
name = "boolean"
path = "examples/boolean.rs"

[[example]]
name = "array"
path = "examples/array.rs"

[[example]]
name = "constfold"
path = "examples/constfold.rs"
required-features = ["analysis"]

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
